@@ -66,6 +66,11 @@ EXTENDED CREDITS LIST
 - Stephen Alexander <ArmagonNo1@gmail.com>
 
 ==========
+= MISSIONS
+==========
+- Arkhnen -> Teamwork 2 (2012)
+
+==========
 = SOUNDS
 ==========
 - Mine impact sound from http://www.freesound.org/people/adcbicycle/sounds/13947/
